# nbdev_tutorial

./: 00_core.ipynb  index.ipynb  pyproject.toml  settings.ini
.github/workflows/: main.yml
docs/: _config.yml  core.html
nbdev_tutorial/: _nbdev.py
