[tool.poetry]
name = "nbdev_tutorial"
version = "0.1.0"
description = ""
authors = ["An <hoangthienan95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "^53.0.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.0.7"
nbdev = "^1.1.12"
plotly = "^4.14.3"
pandas = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
